--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,86 @@
 @import url("https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;700&display=swap");
-
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Gothic A1', sans-serif !important;
-}
+  font-family: 'Gothic A1', sans-serif !important; }
 
 header .navbar-toggler {
-  border: none;
-}
+  border: none; }
 
-header .nav-link:hover {
-  color: #009fe3 !important;
-}
+header .navbar-toggler:focus {
+  box-shadow: none !important; }
+
+header .header-iconohamburguesa img {
+  height: 2rem !important; }
+
+header .nav-item:hover {
+  font-weight: bold; }
 
 body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: "Gothic A1", sans-serif !important;
-}
-
-body p {
-  text-align: center;
-}
-
-body h3 {
-  text-align: center;
-  font-size: 30px;
-  font-weight: bold;
-}
-
-body h1 {
-  text-align: center;
-  background-color: #009fe3;
-  font-size: 50px;
-  font-weight: bold;
-  width: 100%;
-}
+  font-family: "Gothic A1", sans-serif !important; }
+  body p {
+    text-align: center; }
+  body h3 {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold; }
+  body h1 {
+    text-align: center;
+    background-color: #009fe3;
+    font-size: 50px;
+    font-weight: bold;
+    width: 100%; }
 
 @media (max-width: 768px) {
   body h3 {
-    font-size: 20px;
-  }
-}
+    font-size: 20px; } }
 
 @media (max-width: 700px) {
   body h1 {
-    font-size: 37px;
-  }
-}
+    font-size: 37px; } }
 
 @media (max-width: 450px) {
   body h1 {
-    font-size: 25px;
-  }
-}
+    font-size: 25px; } }
 
 #footer {
   margin-top: auto;
   background-image: url(../resources/image/index/fondo-footer.jpg);
   background-repeat: repeat;
-  width: 100%;
-}
-
-#footer .grid-footer {
-  display: grid;
-  grid-template-columns: 20% 40% 40%;
-  grid-template-rows: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "redes datos ubicacion";
-}
-
-#footer .redes {
-  grid-area: redes;
-}
-
-#footer .datos {
-  grid-area: datos;
-}
-
-#footer .ubicacion {
-  grid-area: ubicacion;
-}
-
-#footer .redes {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#footer .datos {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#footer .ubicacion {
-  display: flex;
-  justify-content: center;
-}
+  width: 100%; }
+  #footer .grid-footer {
+    display: grid;
+    grid-template-columns: 20% 40% 40%;
+    grid-template-rows: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas: "redes datos ubicacion"; }
+  #footer .redes {
+    grid-area: redes; }
+  #footer .datos {
+    grid-area: datos; }
+  #footer .ubicacion {
+    grid-area: ubicacion; }
+  #footer .redes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  #footer .datos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  #footer .ubicacion {
+    display: flex;
+    justify-content: center; }
 
 @media (max-width: 768px) {
   .datos {
-    font-size: 15px;
-  }
-}
+    font-size: 15px; } }
 
 @media (max-width: 700px) {
   #footer .grid-footer {
@@ -117,23 +89,15 @@ body h1 {
     grid-template-rows: 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas: "redes"
-      "datos"
-      "ubicacion";
-  }
-
+    grid-template-areas: "redes" "datos" "ubicacion"; }
   #footer .redes {
     flex-direction: row;
-    padding: 10px;
-  }
-}
+    padding: 10px; } }
 
 @media (max-width: 450px) {
   #footer .redes {
     flex-direction: row;
-    padding: 10px;
-  }
-}
+    padding: 10px; } }
 
 #main-index .main-index__grid {
   display: grid;
@@ -143,32 +107,22 @@ body h1 {
   grid-auto-flow: row;
   justify-content: space-between;
   align-items: stretch;
-  grid-template-areas: "main-index__seccion1 main-index__seccion2 main-index__seccion3";
-}
+  grid-template-areas: "main-index__seccion1 main-index__seccion2 main-index__seccion3"; }
 
 #main-index .main-index__seccion2 {
-  grid-area: main-index__seccion2;
-}
-
-#main-index .main-index__seccion2 :hover {
-  width: 101%;
-}
+  grid-area: main-index__seccion2; }
+  #main-index .main-index__seccion2 :hover {
+    width: 101%; }
 
 #main-index .main-index__seccion1 {
-  grid-area: main-index__seccion1;
-}
-
-#main-index .main-index__seccion1 :hover {
-  width: 101%;
-}
+  grid-area: main-index__seccion1; }
+  #main-index .main-index__seccion1 :hover {
+    width: 101%; }
 
 #main-index .main-index__seccion3 {
-  grid-area: main-index__seccion3;
-}
-
-#main-index .main-index__seccion3 :hover {
-  width: 101%;
-}
+  grid-area: main-index__seccion3; }
+  #main-index .main-index__seccion3 :hover {
+    width: 101%; }
 
 #main-index .seccion1,
 #main-index .seccion2,
@@ -176,12 +130,10 @@ body h1 {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
-  justify-content: flex-start;
-}
+  justify-content: flex-start; }
 
 #main-index img {
-  width: 100%;
-}
+  width: 100%; }
 
 @media (max-width: 450px) {
   #main-index .main-index__grid {
@@ -192,68 +144,48 @@ body h1 {
     grid-auto-flow: row;
     justify-content: space-between;
     align-items: center;
-    grid-template-areas: "main-index__seccion1"
-      "main-index__seccion2"
-      "main-index__seccion3";
-  }
-}
+    grid-template-areas: "main-index__seccion1" "main-index__seccion2" "main-index__seccion3"; } }
 
 .quienes-somos-flex {
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: center;
-}
-
-.quienes-somos-flex img {
-  height: 350px;
-  padding: 30px;
-}
-
-.quienes-somos-flex p {
-  padding: 30px;
-  width: 350px;
-  text-align: justify;
-}
-
-@media (max-width: 700px) {
-  .quienes-somos-flex {
-    flex-direction: column;
-  }
-
-  .quienes-somos-flex p {
-    padding: 0;
-    width: 320px;
-    text-align: justify;
-  }
-
+  justify-content: center; }
   .quienes-somos-flex img {
-    padding: 0;
-    width: 350px;
-  }
-}
-
-@media (max-width: 375px) {
-  .quienes-somos-flex {
-    flex-direction: column;
-  }
-
+    height: 500px;
+    padding: 30px; }
   .quienes-somos-flex p {
-    padding-top: 10px;
-    width: 300px;
+    padding: 30px;
+    width: 500px;
     text-align: justify;
-  }
+    font-size: 22px; }
 
-  .quienes-somos-flex img {
-    padding: 0;
-    width: 300px;
-    height: 300px;
-  }
-}
+@media (max-width: 768px) {
+  .quienes-somos-flex {
+    flex-direction: column; }
+    .quienes-somos-flex p {
+      padding-top: 5px;
+      width: 450px;
+      text-align: justify; }
+    .quienes-somos-flex img {
+      padding: 0;
+      width: 450px; } }
+
+@media (max-width: 425px) {
+  .quienes-somos-flex {
+    flex-direction: column; }
+    .quienes-somos-flex p {
+      padding-top: 10px;
+      width: 300px;
+      text-align: justify;
+      font-size: 18px; }
+    .quienes-somos-flex img {
+      padding: 0;
+      width: 300px;
+      height: 300px; } }
 
 #main-productos img {
-  width: 100%;
-}
+  width: 100%; }
 
 #main-productos .grid-productos {
   display: grid;
@@ -261,42 +193,32 @@ body h1 {
   grid-template-rows: 1fr 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas: "prod1 prod2 prod3 prod4"
-    "prod5 prod6 prod7 prod8";
-  justify-content: space-between;
-}
+  grid-template-areas: "prod1 prod2 prod3 prod4" "prod5 prod6 prod7 prod8";
+  justify-content: space-between; }
 
 #main-productos .prod1 {
-  grid-area: prod1;
-}
+  grid-area: prod1; }
 
 #main-productos .prod2 {
-  grid-area: prod2;
-}
+  grid-area: prod2; }
 
 #main-productos .prod3 {
-  grid-area: prod3;
-}
+  grid-area: prod3; }
 
 #main-productos .prod4 {
-  grid-area: prod4;
-}
+  grid-area: prod4; }
 
 #main-productos .prod5 {
-  grid-area: prod5;
-}
+  grid-area: prod5; }
 
 #main-productos .prod6 {
-  grid-area: prod6;
-}
+  grid-area: prod6; }
 
 #main-productos .prod7 {
-  grid-area: prod7;
-}
+  grid-area: prod7; }
 
 #main-productos .prod8 {
-  grid-area: prod8;
-}
+  grid-area: prod8; }
 
 #main-productos .prod1,
 #main-productos .prod2,
@@ -307,8 +229,7 @@ body h1 {
 #main-productos .prod7,
 #main-productos .prod8 {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 #main-productos .article-flex-main-productos {
   display: flex;
@@ -316,26 +237,19 @@ body h1 {
   align-content: center;
   justify-content: space-between;
   padding: 30px;
-  text-align: center;
-}
+  text-align: center; }
 
 @media (max-width: 1440px) {
   #main-productos .grid-productos h3 {
-    font-size: 25px;
-  }
-}
+    font-size: 25px; } }
 
 @media (max-width: 1024px) {
   #main-productos .grid-productos h3 {
-    font-size: 20px;
-  }
-}
+    font-size: 20px; } }
 
 @media (max-width: 768px) {
   #main-productos .grid-productos h3 {
-    font-size: 15px;
-  }
-}
+    font-size: 15px; } }
 
 @media (max-width: 450px) {
   #main-productos .grid-productos {
@@ -344,17 +258,11 @@ body h1 {
     grid-template-rows: 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas: "prod1 prod2"
-      "prod3 prod4"
-      "prod5 prod6"
-      "prod7 prod8";
-    justify-content: space-between;
-  }
-}
+    grid-template-areas: "prod1 prod2" "prod3 prod4" "prod5 prod6" "prod7 prod8";
+    justify-content: space-between; } }
 
 #main-cursos .banner {
-  width: 100%;
-}
+  width: 100%; }
 
 #main-cursos .grid-cursos {
   display: grid;
@@ -365,32 +273,26 @@ body h1 {
   grid-template-areas: "sec1 sec2 sec3 sec4";
   justify-content: space-between;
   align-items: baseline;
-  justify-items: stretch;
-}
+  justify-items: stretch; }
 
 #main-cursos .sec1 {
-  grid-area: sec1;
-}
+  grid-area: sec1; }
 
 #main-cursos .sec2 {
-  grid-area: sec2;
-}
+  grid-area: sec2; }
 
 #main-cursos .sec3 {
-  grid-area: sec3;
-}
+  grid-area: sec3; }
 
 #main-cursos .sec4 {
-  grid-area: sec4;
-}
+  grid-area: sec4; }
 
 #main-cursos .sec1,
 #main-cursos .sec2,
 #main-cursos .sec3,
 #main-cursos .sec4 {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 @media (max-width: 768px) {
   #main-cursos .grid-cursos {
@@ -399,13 +301,10 @@ body h1 {
     grid-template-rows: 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas: "sec1 sec2"
-      "sec3 sec4";
+    grid-template-areas: "sec1 sec2" "sec3 sec4";
     justify-content: space-between;
     align-items: baseline;
-    justify-items: stretch;
-  }
-}
+    justify-items: stretch; } }
 
 @media (max-width: 450px) {
   #main-cursos .grid-cursos {
@@ -414,27 +313,20 @@ body h1 {
     grid-template-rows: 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas: "sec1"
-      "sec2"
-      "sec3"
-      "sec4";
+    grid-template-areas: "sec1" "sec2" "sec3" "sec4";
     justify-content: space-between;
     align-items: baseline;
-    justify-items: stretch;
-  }
-}
+    justify-items: stretch; } }
 
 #main-contacto img {
   width: 300px;
-  padding: 5px;
-}
+  padding: 5px; }
 
 #main-contacto .div-contacto {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  align-items: center;
-}
+  align-items: center; }
 
 #main-contacto .form-contacto {
   display: flex;
@@ -442,37 +334,27 @@ body h1 {
   padding: 20px;
   background-color: #009fe3;
   border-radius: 10px;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 #main-contacto .form-contacto p {
   padding: 20px;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 #main-contacto .separacion-imput {
-  margin: 5px;
-}
+  margin: 5px; }
 
 #main-contacto .separacion-imput:focus {
   background-color: gainsboro;
   color: black;
-  width: 101%;
-}
+  width: 101%; }
 
 @media (max-width: 1024px) {
   #main-contacto img {
-    width: 200px;
-  }
-
+    width: 200px; }
   #main-contacto .form-contacto {
     width: 300px;
-    padding: 3px;
-  }
-}
+    padding: 3px; } }
 
 @media (max-width: 700px) {
   #main-contacto img {
-    display: none;
-  }
-}
+    display: none; } }
