--- a/scss/sections/_main-nosotros.scss
+++ b/scss/sections/_main-nosotros.scss
@@ -5,37 +5,38 @@
     justify-content: center;
 
     img {
-        height: 350px;
+        height: 500px;
         padding: 30px;
     }
 
     p {
         padding: 30px;
-        width: 350px;
+        width: 500px;
         text-align: justify;
+        font-size: 22px;
     }
 
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
     .quienes-somos-flex {
         flex-direction: column;
 
         p {
-            padding: 0;
-            width: 320px;
+            padding-top: 5px;
+            width: 450px;
             text-align: justify;
         }
 
         img {
             padding: 0;
-            width: 350px;
+            width: 450px;
         }
     }
 
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .quienes-somos-flex {
         flex-direction: column;
 
@@ -43,6 +44,7 @@
             padding-top: 10px;
             width: 300px;
             text-align: justify;
+            font-size: 18px;
         }
 
         img {
