--- a/scss/sections/_main-contacto.scss
+++ b/scss/sections/_main-contacto.scss
@@ -9,6 +9,7 @@
         justify-content: center;
         flex-wrap: wrap;
         align-items: center;
+        align-content: center;
     }
 
     .form-contacto {
